# libfsclfs

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfsclfs-wiki.ini  libfsclfs.ini  libfsclfs.pc.in  libfsclfs.spec.in  runtests.sh  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.github/workflows/: build_ossfuzz.yml
.travis/: before_install.sh  runtests.sh  script.sh
common/: types.h.in
documenation/: Common Log File System (CLFS).asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
fsclfstools/: Makefile.am  fsclfsinfo  fsclfsinfo.c  fsclfsoutput.c  fsclfsoutput.h  fsclfstest  fsclfstest.c  fsclfstools_getopt.c  fsclfstools_getopt.h  fsclfstools_i18n.h  fsclfstools_libbfio.h  fsclfstools_libcerror.h  fsclfstools_libclocale.h  fsclfstools_libcnotify.h  fsclfstools_libcstring.h  fsclfstools_libcsystem.h  fsclfstools_libfdatetime.h  fsclfstools_libfguid.h  fsclfstools_libfsclfs.h  fsclfstools_libftxf.h  fsclfstools_libftxr.h  fsclfstools_libuna.h  fsclfstools_output.c  fsclfstools_output.h  fsclfstools_signal.c  fsclfstools_signal.h  fsclfstools_unused.h  info_handle.c  info_handle.h
include/: Makefile.am  libfsclfs.h.in
include/libfsclfs/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfsclfs/: Makefile.am  fsclfs_base_log_record.h  fsclfs_block.h  fsclfs_record.h  libfsclfs.c  libfsclfs.rc.in  libfsclfs_block.c  libfsclfs_block.h  libfsclfs_block_descriptor.c  libfsclfs_block_descriptor.h  libfsclfs_container.c  libfsclfs_container.h  libfsclfs_container_descriptor.c  libfsclfs_container_descriptor.h  libfsclfs_debug.c  libfsclfs_debug.h  libfsclfs_definitions.h.in  libfsclfs_error.c  libfsclfs_error.h  libfsclfs_extern.h  libfsclfs_io_handle.c  libfsclfs_io_handle.h  libfsclfs_libbfio.h  libfsclfs_libcdata.h  libfsclfs_libcerror.h  libfsclfs_libclocale.h  libfsclfs_libcnotify.h  libfsclfs_libcstring.h  libfsclfs_libfdata.h  libfsclfs_libfguid.h  libfsclfs_libuna.h  libfsclfs_log_range.c  libfsclfs_log_range.h  libfsclfs_notify.c  libfsclfs_notify.h  libfsclfs_owner_page.c  libfsclfs_owner_page.h  libfsclfs_record.c  libfsclfs_record.h  libfsclfs_record_value.c  (+12 more)
manuals/: Makefile.am  fsclfsinfo.1  libfsclfs.3
msvscpp/: Makefile.am  libfsclfs.sln
msvscpp/fsclfs_test_block/: fsclfs_test_block.vcproj
msvscpp/fsclfs_test_block_descriptor/: fsclfs_test_block_descriptor.vcproj
msvscpp/fsclfs_test_container/: fsclfs_test_container.vcproj
msvscpp/fsclfs_test_container_descriptor/: fsclfs_test_container_descriptor.vcproj
msvscpp/fsclfs_test_error/: fsclfs_test_error.vcproj
msvscpp/fsclfs_test_get_version/: fsclfs_test_get_version.vcproj
msvscpp/fsclfs_test_io_handle/: fsclfs_test_io_handle.vcproj
msvscpp/fsclfs_test_log_range/: fsclfs_test_log_range.vcproj
msvscpp/fsclfs_test_notify/: fsclfs_test_notify.vcproj
msvscpp/fsclfs_test_owner_page/: fsclfs_test_owner_page.vcproj
msvscpp/fsclfs_test_record/: fsclfs_test_record.vcproj
msvscpp/fsclfs_test_record_value/: fsclfs_test_record_value.vcproj
msvscpp/fsclfs_test_store/: fsclfs_test_store.vcproj
msvscpp/fsclfs_test_stream/: fsclfs_test_stream.vcproj
msvscpp/fsclfs_test_stream_descriptor/: fsclfs_test_stream_descriptor.vcproj
msvscpp/fsclfs_test_support/: fsclfs_test_support.vcproj
msvscpp/fsclfs_test_tools_info_handle/: fsclfs_test_tools_info_handle.vcproj
msvscpp/fsclfs_test_tools_output/: fsclfs_test_tools_output.vcproj
msvscpp/fsclfs_test_tools_signal/: fsclfs_test_tools_signal.vcproj
msvscpp/fsclfsinfo/: fsclfsinfo.vcproj
msvscpp/fsclfstest/: fsclfstest.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfsclfs/: libfsclfs.vcproj
msvscpp/libftxf/: libftxf.vcproj
msvscpp/libftxr/: libftxr.vcproj
msvscpp/libfusn/: libfusn.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
msvscpp/libuna/: libuna.vcproj
ossfuzz/: Makefile.am  container_fuzzer.cc  ossfuzz_libfsclfs.h  store_fuzzer.cc  stream_fuzzer.cc
po/: ChangeLog
tests/: Makefile.am  fsclfs_test_block.c  fsclfs_test_block_descriptor.c  fsclfs_test_container.c  fsclfs_test_container_descriptor.c  fsclfs_test_error.c  fsclfs_test_functions.c  fsclfs_test_functions.h  fsclfs_test_get_version.c  fsclfs_test_getopt.c  fsclfs_test_getopt.h  fsclfs_test_io_handle.c  fsclfs_test_libbfio.h  fsclfs_test_libcerror.h  fsclfs_test_libclocale.h  fsclfs_test_libcnotify.h  fsclfs_test_libcstring.h  fsclfs_test_libcsystem.h  fsclfs_test_libfsclfs.h  fsclfs_test_libuna.h  fsclfs_test_log_range.c  fsclfs_test_macros.h  fsclfs_test_memory.c  fsclfs_test_memory.h  fsclfs_test_notify.c  fsclfs_test_owner_page.c  fsclfs_test_record.c  fsclfs_test_record_value.c  fsclfs_test_store.c  fsclfs_test_stream.c  fsclfs_test_stream_descriptor.c  fsclfs_test_support.c  fsclfs_test_tools_info_handle.c  fsclfs_test_tools_output.c  fsclfs_test_tools_signal.c  fsclfs_test_unused.h  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_api_types.ps1  (+7 more)
tests/data/: container_descriptor.1  stream_descriptor.1
