MSVSCPP_FILES = \
	fsclfs_test_error/fsclfs_test_error.vcproj \
	fsclfs_test_get_version/fsclfs_test_get_version.vcproj \
	fsclfsinfo/fsclfsinfo.vcproj \
	fsclfstest/fsclfstest.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsclfs/libfsclfs.vcproj \
	libftxf/libftxf.vcproj \
	libftxr/libftxr.vcproj \
	libfusn/libfusn.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfsclfs.sln

SCRIPT_FILES = \
	scripts/vs2008_x64.sh \
	scripts/vs2008_x64_sln.sed \
	scripts/vs2008_x64_vcproj.sed \
	scripts/vs2010_x64.sh \
	scripts/vs2010_x64_sln.sed \
	scripts/vs2010_x64_vcxproj.sed

EXTRA_DIST = \
	$(MSVSCPP_FILES) \
	$(SCRIPT_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

