MSVSCPP_FILES = \
	fsclfs_test_container/fsclfs_test_container.vcproj \
	fsclfs_test_error/fsclfs_test_error.vcproj \
	fsclfs_test_record/fsclfs_test_record.vcproj \
	fsclfs_test_store/fsclfs_test_store.vcproj \
	fsclfs_test_stream/fsclfs_test_stream.vcproj \
	fsclfs_test_support/fsclfs_test_support.vcproj \
	fsclfsinfo/fsclfsinfo.vcproj \
	fsclfstest/fsclfstest.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsclfs/libfsclfs.vcproj \
	libftxf/libftxf.vcproj \
	libftxr/libftxr.vcproj \
	libfusn/libfusn.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfsclfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

