MSVSCPP_FILES = \
	fsclfs_test_block/fsclfs_test_block.vcproj \
	fsclfs_test_block_descriptor/fsclfs_test_block_descriptor.vcproj \
	fsclfs_test_container/fsclfs_test_container.vcproj \
	fsclfs_test_container_descriptor/fsclfs_test_container_descriptor.vcproj \
	fsclfs_test_error/fsclfs_test_error.vcproj \
	fsclfs_test_io_handle/fsclfs_test_io_handle.vcproj \
	fsclfs_test_log_range/fsclfs_test_log_range.vcproj \
	fsclfs_test_notify/fsclfs_test_notify.vcproj \
	fsclfs_test_owner_page/fsclfs_test_owner_page.vcproj \
	fsclfs_test_record/fsclfs_test_record.vcproj \
	fsclfs_test_record_value/fsclfs_test_record_value.vcproj \
	fsclfs_test_store/fsclfs_test_store.vcproj \
	fsclfs_test_stream/fsclfs_test_stream.vcproj \
	fsclfs_test_stream_descriptor/fsclfs_test_stream_descriptor.vcproj \
	fsclfs_test_support/fsclfs_test_support.vcproj \
	fsclfs_test_tools_info_handle/fsclfs_test_tools_info_handle.vcproj \
	fsclfs_test_tools_output/fsclfs_test_tools_output.vcproj \
	fsclfs_test_tools_signal/fsclfs_test_tools_signal.vcproj \
	fsclfsinfo/fsclfsinfo.vcproj \
	fsclfstest/fsclfstest.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsclfs/libfsclfs.vcproj \
	libftxf/libftxf.vcproj \
	libftxr/libftxr.vcproj \
	libfusn/libfusn.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfsclfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

